--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   },
   "homepage": "https://github.com/devclub-iitd/IITDMarketServer#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.154",
     "@types/lusca": "^1.6.1",
     "@types/mongodb": "^3.5.20",
@@ -68,6 +70,8 @@
     "@types/passport": "^1.0.3",
     "@types/passport-local-mongoose": "^4.0.13",
     "@types/socket.io": "^2.1.8",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
@@ -77,6 +81,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "lusca": "^1.6.1",
     "method-override": "^3.0.0",
