--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "strictNullChecks": false,
     "removeComments": true,
+    "allowJs": true
   },
   "include": [
     "src/**/*.ts",
